2011-12-03  David Gilbert <david.gilbert@object-refinery.com>

    Bug 3446965:
    * org/jfree/data/time/TimeSeries.java
    (addOrUpdate): correct update of this.maxY.

----------  JFREECHART 1.0.14 RELEASED ------------------------

2011-11-20  David Gilbert <david.gilbert@object-refinery.com>

    Bug 3440237:
    * org/jfree/chart/plot/CategoryPlot.java
    (CategoryPlot): initialise shadow generator as null;
    (PiePlot): likewise;

2011-11-13  David Gilbert <david.gilbert@object-refinery.com>

    Patch 3435734 by Martin Hoeller:
    * org/jfree/chart/renderer/category/LineRenderer3D.java
    (drawItem): Draw lines in pass 0 and item labels in pass 1;

2011-11-12  Martin Hoeller <martin.hoeller@xss.co.at>

    Bug 3432721:
    * org/jfree/chart/plot/PolarPlot.java
    (translateToJava2D): Fix calculation to work with any axis,
    (translateValueThetaRadiusToJava2D): eliminate duplicate code;
    * tests/org/jfree/chart/plot/PolarPlotTests.java
    (testTranslateToJava2D_NumberAxis): New method,
    (testTranslateToJava2D_NumberAxisAndMargin): New method,
    (testTranslateToJava2D_LogAxis): New method;

2011-11-09  Martin Hoeller <martin.hoeller@xss.co.at>

    Translations provided by Petr Kopac:
    * org/jfree/chart/LocalizationBundle_cs.properties: New file;
    * org/jfree/chart/plot/LocalizationBundle_cs.properties: New file;
    * org/jfree/chart/editor/LocalizationBundle_cs.properties: New file;

2011-11-09  Martin Hoeller <martin.hoeller@xss.co.at>

    Bug 3433405:
    * org/jfree/chart/renderer/category/LineRenderer3D.java
    (drawItem): Fixed eventually wrong item label position;

2011-11-01  David Gilbert <david.gilbert@object-refinery.com>

    Bug 3432020:
    * org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java
    (clone): Remove duplicated lines.

2011-10-30  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/renderer/category/IntervalBarRenderer.java
    (drawInterval): Fix calculation of bar edge;