@@ -1,5 +1,11 @@
 2011-12-03  David Gilbert <david.gilbert@object-refinery.com>
 
+    Bug 2879650:
+    * org/jfree/chart/servlet/DisplayChart.java
+    (service): Don't display file path in exception.
+
+2011-12-03  David Gilbert <david.gilbert@object-refinery.com>
+
     Bug 3446965:
     * org/jfree/data/time/TimeSeries.java
     (addOrUpdate): correct update of this.maxY.
